[gd_scene load_steps=4 format=3 uid="uid://cskhhg265nav7"]

[ext_resource type="Script" uid="uid://62ot3fq57fyc" path="res://dawgshi/scripts/prototype.gd" id="1_gxbh7"]
[ext_resource type="PackedScene" uid="uid://y88pde7x1pev" path="res://dawgshi/actualprojectshi/buat_laporan.tscn" id="2_883nb"]
[ext_resource type="PackedScene" uid="uid://btbo0u2n32diw" path="res://dawgshi/actualprojectshi/buat_folder.tscn" id="3_7fmhn"]

[node name="Prototype" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gxbh7")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="BuatLaporan" parent="." instance=ExtResource("2_883nb")]
layout_mode = 0
offset_left = 0.0
offset_top = 0.0
offset_right = 1250.0
offset_bottom = 686.0

[node name="BuatFolder" parent="." instance=ExtResource("3_7fmhn")]
visible = false
layout_mode = 0
offset_left = 0.0
offset_top = 0.0
offset_right = 1242.0
offset_bottom = 687.0

[connection signal="timeout" from="Timer" to="." method="_on_timeout"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_request_completed"]
